# rag-prototype

./: .gitignore  README.md  agentic_rag.py  app.py  generate_doc.py  ingest.py  issues-rag  pyproject.toml  rag.py
documents/: code_of_conduct.txt  expense_reimbursement_policy.txt  leave_policy.txt  remote_work_policy.txt
